--- a/templates/note/note.html
+++ b/templates/note/note.html
@@ -1,3 +1,5 @@
+{% extends 'note/base.html' %}
+{% block content %}
 <h1>詳細表示</h1>
 {% if note %}
 <p>{{user.username}}</p>
@@ -20,3 +22,4 @@
     </tr>
 </table>
 {% endif %}
+{% endblock content %}
