--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -1,11 +1,20 @@
 <html>
     <head>
-        <title>NAL研卒業研究ノート</title>
+        <title>NAL研卒業研究ノート::{% block title %}{%endblock title%}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="/site_media/css/scaffold.css" />
     </head>
     <body>
         <div class="header">
+            <h1>NAL研卒業研究ノート</h1>
+            <a href='/note'>トップページ</a>|
+            <a href='/note/belong_list'>所属一覧</a>|
+            <a href='/note/create_user'>新規ユーザー作成</a>|
+            <a href='/note/create_belong'>新規所属作成</a>|
+            <a href='/note/login'>ログイン</a>|
+            <a href='/note/logout'>ログアウト</a>|
+            <a href='/note/rss'>RSS</a>|
+            <a href='/note/comment_rss'>コメントRSS</a>
         </div>
 
         <div class="content">
