--- a/templates/note/user.html
+++ b/templates/note/user.html
@@ -1,4 +1,7 @@
 {% extends "note/base.html" %}
+{% block title %}
+{{user.nick}} のノート一覧
+{% endblock title %}
 {% block content %}
 <h1>{{user.nick}} のノート一覧</h1>
 {% if notes %}
