--- a/templates/note/index.html
+++ b/templates/note/index.html
@@ -5,12 +5,22 @@ Index
 {% endblock title %}
 
 {% block content %}
-{% if user_list %}
-<ul>
-    {% for user in user_list %}
-    <li><a href="{{user.nick}}">{{ user.username }}</a></li>
+{% if user_table %}
+<table border="1">
+    {% for year_list in user_table %}
+    <tr>
+        {% for users in year_list %}
+        <td>
+        <ul>
+            {% for user in users %}
+            <li><a href='/note/{{user.nick}}'/>{{user.username}}</a></li>
+            {% endfor %}
+        </ul>
+        </td>
+        {% endfor %}
+    </tr>
     {% endfor %}
-</ul>
+</table>
 {% else %}
 <p> No users are avaliable. </p>
 {% endif %}
