ノート作成機能を追加

--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -11,8 +11,8 @@
             <a href='/note/belong_list'>所属一覧</a>|
             <a href='/note/create_user'>新規ユーザー作成</a>|
             <a href='/note/create_belong'>新規所属作成</a>|
-            <a href='/note/login'>ログイン</a>|
-            <a href='/note/logout'>ログアウト</a>|
+            <a href='/note/auth/login'>ログイン</a>|
+            <a href='/note/auth/logout'>ログアウト</a>|
             <a href='/note/rss'>RSS</a>|
             <a href='/note/comment_rss'>コメントRSS</a>
         </div>
@@ -20,8 +20,8 @@
         <div class="content">
             <p style="color: green"></p>
             {% block content %}{% endblock content%}
-            <br>
         </div>
+            <br>
         <div class="footer">
             Django 1.1 yono@eva.ie.u-ryukyu.ac.jp
         </div>
