--- a/templates/note/login.html
+++ b/templates/note/login.html
@@ -8,12 +8,12 @@ Login
 <table>
     <tr>
         <td>名前:</td>
-        <td><input id="login_nick" name="login_nick" size="30" type="text"
+        <td><input id="username" name="username" size="30" type="text"
             value="" /></td>
     </tr>
     <tr>
         <td>パスワード:</td>
-        <td><input id="login_password" name="login_password" size="30"
+        <td><input id="password" name="password" size="30"
             type="password" /></td>
     </tr>
     <tr>
