--- a/templates/note/user.html
+++ b/templates/note/user.html
@@ -1,9 +1,9 @@
 {% extends "note/base.html" %}
 {% block title %}
-{{user.nick}} のノート一覧
+{{user.fullname}}のノート一覧
 {% endblock title %}
 {% block content %}
-<h1>{{user.nick}} のノート一覧</h1>
+<h1>{{user.fullname}} のノート一覧</h1>
 {% if notes %}
 <table border="1" cellspacing="0">
     <tr>
@@ -12,7 +12,7 @@
     {% for note in notes %}
     <tr>
         <td>{{note.date}}</td>
-        <td><a href="{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
         <td>{{note.date}}</td>
         <td>{{note.locate}}</td>
     </tr>
