--- a/templates/note/logout.html
+++ b/templates/note/logout.html
@@ -1,9 +1,11 @@
 {% extends 'note/base.html' %}
 {% block title %} 
-Login
+Logout
 {% endblock title %}
 {% block content %}
-<h1>Login</h1>
+<h1>ログアウトしました</h1>
+<hr>
+<h2>ログインフォーム</h2>
 <form action"." method="post">
     {% csrf_token %}
 <table>
