--- a/templates/note/tag.html
+++ b/templates/note/tag.html
@@ -1,20 +1,21 @@
 {% extends "note/base.html" %}
 {% load select_date %}
 {% block title %}
-tag/{{tag.name}}
+[{{tag.name}}]タグの付いたノート一覧
 {% endblock title %}
 {% block content %}
-<h1>[{{tag.name}}]</h1>
+<h1>[{{tag.name}}]タグの付いたノート一覧</h1>
 {% if notes %}
 <table border="1" cellspacing="0">
     <tr>
-        <th>日付</th><th>タイトル</th><th>開始時刻</th><th>終了時刻</th><th>時
+        <th>氏名</th><th>日付</th><th>タイトル</th><th>開始時刻</th><th>終了時刻</th><th>時
             間</th><th>場所</th>
     </tr>
     {% for note in notes %}
     <tr>
+        <td>{{note.user.fullname}}</td>
         <td>{{note.date}}</td>
-        <td><a href="{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="/note/user/{{note.user.username}}/{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
         <td>{{note.start}}</td>
         <td>{{note.end}}</td>
         <td>{{note.elapsed_time|form_elapsed_time}}</td>
@@ -25,5 +26,4 @@ tag/{{tag.name}}
 {% else %}
 <p> No notes are avaliable. </p>
 {% endif %}
-<p><a href="/note/note_new?user={{user.id}}">新規作成</a></p>
 {% endblock content %}
