--- a/templates/note/user.html
+++ b/templates/note/user.html
@@ -5,9 +5,8 @@
 {% endblock title %}
 {% block content %}
 <h1>{{user.fullname}} のノート一覧</h1>
-<p><a href="/note/note_new?user={{user.id}}">新規作成</a></p>
 {% if notes %}
-<p>タグ一覧: 
+<p>タグ一覧:
 {% for tag in tags %}
 <a href='/note/tag/{{tag.tag}}/' class='{{tag.cssclass}}'>{{tag.tag}}</a>&nbsp;
 {% endfor %}
@@ -20,7 +19,7 @@
     {% for note in notes %}
     <tr>
         <td>{{note.date}}</td>
-        <td><a href="{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="/note/user/{{user.username}}/{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
         <td>{{note.start}}</td>
         <td>{{note.end}}</td>
         <td>{{note.elapsed_time|form_elapsed_time}}</td>
