RSS配信を実装

--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -17,7 +17,7 @@
             {% else %}
             <a href='/note/auth/login/'>ログイン</a>|
             {% endif %}
-            <a href='/note/rss/'>RSS</a>|
+            <a href='/note/rss/latest/'>RSS</a>|
             <a href='/note/comment_rss/'>コメントRSS</a>|
         </div>
 
