--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -19,6 +19,10 @@
             {% endif %}
             <a href='/note/rss/latest/'>RSS</a>|
             <a href='/note/comment_rss/'>コメントRSS</a>|
+            <form action='/note/search' method='GET'>
+                <input name='keywords' value="" />
+                <input type="submit" value="検索" class="button" />
+            </form>
         </div>
 
         <div class="content">
