タグ一覧を追加 note_delete 等の変数受け渡し方を変更

--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -24,7 +24,7 @@
             <a href='/note/auth/login/'>ログイン</a>|
             {% endif %}
             <a href='/note/rss/latest/'>RSS</a>|
-            <a href='/note/comment_rss/'>コメントRSS</a>|
+            <a href='/note/rss/comment/'>コメントRSS</a>|
             <form action='/note/search' method='GET'>
                 <input name='keywords' value="" />
                 <input type="submit" value="検索" class="button" />
