--- a/templates/note/home.html
+++ b/templates/note/home.html
@@ -38,16 +38,16 @@ value='{{belong.start.year}}'>{{belong.grade}}/{{belong.start.year}}</option>
     {% for note in notes %}
     <tr>
         <td>{{note.date}}</td>
-        <td><a href="/note/user/{{theuser.username}}/{{note.date.year}}/{{note.date.month}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="/note/user/{{theuser.username}}/{{note.id}}">{{note.title}}</a></td>
         {% ifequal theuser.id user.id %}
-        <td><a href="/note/note_edit/{{note.id}}/">編集</a></td>
+        <td><a href="/note/note_edit?note_id={{note.id}}">編集</a></td>
         {% endifequal %}
         <td>{{note.start}}</td>
         <td>{{note.end}}</td>
         <td>{{note.elapsed_time|form_elapsed_time}}</td>
         <td>{{note.locate}}</td>
         {% ifequal theuser.id user.id %}
-        <td><a href="/note/note_delete/{{note.id}}/">削除</a></td>
+        <td><a href="/note/note_delete?note_id={{note.id}}">削除</a></td>
         {% endifequal %}
     </tr>
     {% endfor %}
