Wiki記法を導入(Wiki Creole) ノートの並びを修正

--- a/templates/note/note.html
+++ b/templates/note/note.html
@@ -34,7 +34,7 @@
     </tr>
     <tr>
         <td><nobr>内容</nobr></td>
-        <td>{{note.content|add_br|safe}}</td>
+        <td>{{note.content|safe}}</td>
     </tr>
     <tr>
         <td><nobr>タグ</nobr></td>
