ノートのURL変更

--- a/templates/note/search.html
+++ b/templates/note/search.html
@@ -20,7 +20,7 @@
     <tr>
         <td>{{note.user.fullname}}</td>
         <td>{{note.date}}</td>
-        <td><a href="/note/user/{{note.user.username}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="/note/note_detail/{{note.id}}">{{note.title}}</a></td>
     </tr>
     {% endfor %}
 </table>
