--- a/templates/note/user.html
+++ b/templates/note/user.html
@@ -62,7 +62,7 @@ value='{{belong.start.year}}'>{{belong.grade}}/{{belong.start.year}}</option>
     {% for note in notes %}
     <tr>
         <td>{{note.date}}</td>
-        <td><a href="/note/user/{{theuser.username}}/{{note.id}}">{{note.title}}</a></td>
+        <td><a href="/note/note_detail/{{note.id}}">{{note.title}}</a></td>
         {% ifequal theuser.id user.id %}
         <td><a href="/note/note_edit?note_id={{note.id}}">編集</a></td>
         {% endifequal %}
