--- a/templates/note/base.html
+++ b/templates/note/base.html
@@ -25,7 +25,7 @@
             {% endif %}
             <a href='/note/rss/latest/'>RSS</a>|
             <a href='/note/rss/comment/'>コメントRSS</a>|
-            <form action='/note/search' method='GET'>
+            <form action='/note/search/' method='GET'>
                 <input name='keywords' value="" />
                 <input type="submit" value="検索" class="button" />
             </form>
