リファクタリング

--- a/templates/note/note.html
+++ b/templates/note/note.html
@@ -53,7 +53,7 @@
 <table border="1" cellspacing="0">
 <tr>
     <td>本文</td>
-    <td>{{comment.content|safe}}</td>
+    <td>{{comment.content|add_br|safe}}</td>
 </tr>
 <tr>
     <td>投稿者</td>
